# case_Telemetria-Industrial-pubsub

./: .env  .env.sample  Dockerfile  README.md  pyproject.toml  readme2.md
acess/: cool-continuity-469516-n5-bf4327aaa12d.json
data/: telemetria.ndjson  telemetria_fixed.ndjson
src/ingest_service/: config.py  main.py  models.py  pubsub.py
src/ingest_service/tools/: sender.py
tests/: test_health.py
tools/: send_ndjson.py
